--- a/MyCrudGame/Views/Skins/Details.cshtml
+++ b/MyCrudGame/Views/Skins/Details.cshtml
@@ -22,6 +22,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Code)
         </dd>
+           <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.IsActive)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.IsActive)
+        </dd>
     </dl>
 </div>
 <div>
